--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i:300|Princess+Sofia" rel="stylesheet">
-    <link rel="stylesheet" href="./HW-1/style.css">
+    <link rel="stylesheet" href="./HW1/style.css">
 </head>
 
 <body>
@@ -31,16 +31,13 @@
             </div>
         </div>
     </div>
-    <!--end hero-->
 
-    <!-- Container that will "reveal" the background image. -->
-    <!-- This is our parallax-like effect. -->
     <div id="information">
         <div class="description-container">
             <div class="description">
 
-                <h1>Information About Michael</h1>
-                <p>Michael Cassens is a teacher, a computer scientist, creative technologist, gamer, game developer</p>
+                <h1>Information About Nathaniel</h1>
+                <p>This is a test by nathaniel let me see this please</p>
                 <p>and mobile application developer.  His current practice and research is based on how to become a</p>
                 <p>better instructor, how to use gaming practices and theories to deliver better course content as well
                 <p>as build better and more interesting games for the market place using different games engines and
