--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Nathaniel Spilker HM1</title>
-    <meta name="author" content="Nathaniel Spilker">
+    <title>Michael Cassens Example 441 Site</title>
+    <meta name="author" content="Michael Cassens`">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i:300|Princess+Sofia" rel="stylesheet">
-    <link rel="stylesheet" href="./HW1/style.css">
+    <link rel="stylesheet" href="./HW-1/style.css">
 </head>
 
 <body>
 
     <div class="hero">
         <div class="title">
-            <h1>Nathaniel Spilker</h1>
+            <h1>Michael CAssens</h1>
             <h2>MART 441 - Web Tech</h2>
             <h2>Homework Site</h2>
             <div class="nav">
@@ -31,13 +31,16 @@
             </div>
         </div>
     </div>
+    <!--end hero-->
 
+    <!-- Container that will "reveal" the background image. -->
+    <!-- This is our parallax-like effect. -->
     <div id="information">
         <div class="description-container">
             <div class="description">
 
-                <h1>Information About Nathaniel</h1>
-                <p>This is a test by nathaniel let me see this please</p>
+                <h1>Information About Michael</h1>
+                <p>Michael Cassens is a teacher, a computer scientist, creative technologist, gamer, game developer</p>
                 <p>and mobile application developer.  His current practice and research is based on how to become a</p>
                 <p>better instructor, how to use gaming practices and theories to deliver better course content as well
                 <p>as build better and more interesting games for the market place using different games engines and
@@ -50,7 +53,7 @@
 
     <!-- A fake menu, this will re-cover the background image. -->
     <div class="menu" id="class-info">
-        <h1>Information about the Course</h2>
+        <h1>Information about the Course</h1>
         <div class="menu-group-container">
 
             <div class="menu-group">
