--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Michael Cassens Example 441 Site</title>
-    <meta name="author" content="Michael Cassens`">
+    <title>Nathaniel Spilker HM1</title>
+    <meta name="author" content="Nathaniel Spilker">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i:300|Princess+Sofia" rel="stylesheet">
@@ -15,69 +15,59 @@
 
     <div class="hero">
         <div class="title">
-            <h1>Michael CAssens</h1>
+            <h1>Nathaniel Spilker</h1>
             <h2>MART 441 - Web Tech</h2>
             <h2>Homework Site</h2>
             <div class="nav">
-                <a href="#information">
-                    <div class="nav-item">Information</div>
+                <a href="#My Goals">
+                    <div class="nav-item">My Goals</div>
                 </a>
-                <a href="#class-info">
-                    <div class="nav-item">Course Info</div>
-                </a>
-                <a href="http://silverleaf-consulting.com">
-                    <div class="nav-item">Professional Website</div>
+                <a href="#About Me">
+                    <div class="nav-item">About Me</div>
                 </a>
             </div>
         </div>
     </div>
-    <!--end hero-->
 
-    <!-- Container that will "reveal" the background image. -->
-    <!-- This is our parallax-like effect. -->
-    <div id="information">
+    <div id="My Goals">
         <div class="description-container">
             <div class="description">
 
-                <h1>Information About Michael</h1>
-                <p>Michael Cassens is a teacher, a computer scientist, creative technologist, gamer, game developer</p>
-                <p>and mobile application developer.  His current practice and research is based on how to become a</p>
-                <p>better instructor, how to use gaming practices and theories to deliver better course content as well
-                <p>as build better and more interesting games for the market place using different games engines and
-                <p>mobile platforms.</p>
+                <h1>My Goals for this class</h1>
+                <p>I have a hard time with coding and I want to change this. It can overwelm me and confuddle me.</p>
+                <p>My main goal of the class is to learn more about designing webpages and hopefuly not fail the class.</p>
+                <p>I am worried about the class becasue this first week was already very difficult for me with little to
+                <p>no recap on a class I took over a year ago. I am unsure how well i'll be able to perform in this class
+                <p>having forgotten some of the basics.</p>
 
             </div>
         </div>
     </div>
-    <!-- End Parallax-Like -->
 
-    <!-- A fake menu, this will re-cover the background image. -->
-    <div class="menu" id="class-info">
-        <h1>Information about the Course</h1>
+    <div class="menu" id="About Me">
+        <h1>Information about me</h1>
         <div class="menu-group-container">
 
             <div class="menu-group">
 
-                <div class="menu-head">Overview</div>
+                <div class="menu-head">Self</div>
                 <div>
-                    <div class="menu-item">Building on the principles and techniques covered in Intro to Web Design ( MART 341 ), this project-based class focuses on media integration, interactivity, client-side development, and server-side development for the presentation and development of artistic websites.</div>
-                    <div class="menu-item">This online advanced web technologies course will explore the latest in web technologies. This will began with a refresher of HTML5 and CSS3. Next will be a thorough exploration of JavaScript (JS) for client-side site development and interaction. The final topic will touch on the power of JS and node.js for server-side development. A number of JavaScript libraries will be explored for how they can speed up the artistic process.</div>
+                    <div class="menu-item">I am a twenty one year old junior media arts major with a particular passion for sound design and editing. I have no idea how well I will do in this class, but I will try my best!</div>
+                    <div class="menu-item">I have lived in montana for about three years now and can safely say it is a wonderful state. I was born in Florida and came to this college for its media arts program.</div>
                 </div>
             </div>
 
             <div class="menu-group">
 
-                <div class="menu-head">Objectives</div>
+                <div class="menu-head">Hobbies</div>
                 <div>
-                    <div class="menu-item">- Feel comfortable creating static sites with advanced HTML5 & CSS3 techniques.</div>
-                    <div class="menu-item">- Be capable of using JavaScript (JS) to create "interactive elements" and manipulate the DOM.</div>
-                    <div class="menu-item">- Be capable of incorporating external JS libraries, such as d3 or tone.js to create engaging sites.</div>
-                    <div class="menu-item">- Have a basic understanding of the role node.js plays in web development.</div>
-                    <div class="menu-item">- Be capable of creating a basic web-socket based web-app for multi-user interaction.</div>
+                    <div class="menu-item">- I have been practicing and enjoying the violin for sixteen years.</div>
+                    <div class="menu-item">- One of my biggest passions is music. I listen to lots of different genres and always enjoy a good tune.</div>
+                    <div class="menu-item">- I also am a big fan of videogames and have been palying with my siblings since I was a kid.</div>
                 </div>
             </div>
         </div>
-    </div> <!-- End Menu -->
+    </div>
 
 </body>
 </html>
