--- a/HW3/index.html
+++ b/HW3/index.html
@@ -1,17 +1,17 @@
 <html>
 
 <head>
-    <title>Choose your own adventure</title>
+    <title>Choose Your Own Adventure</title>
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
 </head>
 
 <body>
-    <img src="pug.jpg" height="219" width="295">
+    <img src="dragon.jpg" height="400" width="400">
     <br>
-    <h1>Story of the Ages</h1>
+    <h1>There and Back Again</h1>
     <div id="story">
-        Our fearless leader, "Pugster" has entered the dog park for the first time. Scared? Yes, but willing to give it a try. Are you ready to start on adventure with Pugster?
+        The brave heroes set off to slay the dragon, but must overcome many challenges along the way. Dare you enter the dark depths of this dungeon?
     </div>
     <br>
 
