--- a/HW4/index.html
+++ b/HW4/index.html
@@ -1,7 +1,7 @@
 <html>
     <style>
         body{
-            background-color: bisque;
+            background-color: blue;
         }
     </style>
     <script>
