--- a/HW4/index.html
+++ b/HW4/index.html
@@ -68,9 +68,9 @@
     </script>
     <body>
 
-        <h1>Into the void</h1>
+        <h1>The Door of Curiosity</h1>
         <br>
-        <img src="open door.jpg" id="mainImage">
+        <img src="closed door.jpg" id="mainImage" size "100">
     <div id="question">
     <br>
         You are walking down an alley when a magical door appears!
