--- a/HW5/index.html
+++ b/HW5/index.html
@@ -1,18 +1,14 @@
 <html>
-
 <head>
     <title>
-        Memory Matching
+        Mine Sweeper
     </title>
     <script src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     </link>
 </head>
-
 <body onload="printBlanks();">
-    <h1>Memory Game</h1>
-
-
+    <h1>Mine Sweeper</h1>
     <div class="divTable">
         <div class="divTableBody">
             <div class="divTableRow">
@@ -31,7 +27,5 @@
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
