--- a/HW5/index.html
+++ b/HW5/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     </link>
 </head>
-<body onload="printBlanks();">
+<body onload="printBlanks();playerInfo();">
     <h1>Mine Sweeper</h1>
     <div class="divTable">
         <div class="divTableBody">
