--- a/HW5/index.html
+++ b/HW5/index.html
@@ -7,17 +7,24 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     </link>
 </head>
-<body onload="printBlanks();playerInfo();">
+<body>
     <h1>Mine Sweeper</h1>
     <div class="divTable">
         <div class="divTableBody">
             <div class="divTableRow">
-                <div class="divTableCell"><img src="" id="image1" width="250" height="200" onclick="flipImage(0);"></div>
-                <div class="divTableCell"><img src="" id="image2" width="250" height="200" onclick="flipImage(1);"></div>
+                <div class="divTableCell">First Name</div>
+                <div class="divTableCell"><input type="text" id="txtFirstName"></div>
             </div>
             <div class="divTableRow">
-                <div class="divTableCell"><img src="" id="image3" width="250" height="200" onclick="flipImage(2);"></div>
-                <div class="divTableCell"><img src="" id="image4" width="250" height="200" onclick="flipImage(3);"></div>
+                <div class="divTableCell">Last Name</div>
+                <div class="divTableCell"><input type="text" id="txtLastName"></div>
+            </div>
+            <div class="divTableRow">
+                <div class="divTableCell">Age</div>
+                <div class="divTableCell"><input type="text" id="txtAge"></div>
+            </div>
+            <div class="divTableRow">
+                <div class="divTableCell"><button id="btnSubmit" onclick="addToPlayer();">Submit</button></div>
             </div>
         </div>
     </div>
