--- a/HW8/index.html
+++ b/HW8/index.html
@@ -8,10 +8,10 @@
         <button id="move">Move Square</button>
         <br>
         <img src="" id="dog">
-        <p class="stuff">First Paragraph</p>
-        <p class="stuff">Second Paragraph</p>
-        <p id="third">Third Paragraph</p>
+        <p class="stuff">How do you do?</p>
+        <p class="stuff">You're doing a great job!</p>
+        <p id="third">I believe in you!</p>
 
-        <div class="stuff">This is a whole bunch of stuff in the div</div>
+        <div class="stuff"> I hope these little words give you some joy.</div>
     </body>
 </html>
