--- a/HW8/index.html
+++ b/HW8/index.html
@@ -7,11 +7,7 @@
         <br>
         <button id="move">Move Square</button>
         <br>
-        <div id="triangle"></div>
-        <br>
-        <button id="move">Move Triangle</button>
-        <br>
-        <img src="" id="dog">
+        <img src="" id="cat">
         <p class="stuff">How do you do?</p>
         <p class="stuff">You're doing a great job!</p>
         <p id="third">I believe in you!</p>
