--- a/HW9/index.html
+++ b/HW9/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <script src="libs/jquery-3.3.1.min.js"></script>
-    <script src="scripts/jsonajax.js"></script>
-    </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("button").click(function(){
+    $.getJSON("jsonajax.js", function(result){
+      $.each(result, function(i, field){
+        $("div").append(field + " ");
+      });
+    });
+  });
+});
+</script>
+</head>
+<body>
 
-    <body>
-        <div id="bikeInformation"></div>
-        <button id="btnSubmit">Show Information</button>
-    </body>
+<button>Get JSON data</button>
+
+<div></div>
+
+</body>
 </html>
