--- a/HW9/index.html
+++ b/HW9/index.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-  $("button").click(function(){
-    $.getJSON("jsonajax.js", function(result){
-      $.each(result, function(i, field){
-        $("div").append(field + " ");
-      });
-    });
-  });
-});
-</script>
-</head>
-<body>
+    <script src="libs/jquery-3.3.1.min.js"></script>
+    <script src="scripts/main.js"></script>
+    </head>
 
-<button>Get JSON data</button>
-
-<div></div>
-
-</body>
-</html>
+    <body>
+        <div id="bikeInformation"></div>
+        <button id="btnSubmit">Show Information</button>
+    </body>
