--- a/HW9/index.html
+++ b/HW9/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Request JSON Test</title>
+  </head>
 
-<head>
-    <script src="libs/jquery-3.3.1.min.js"></script>
-    <script src="scripts/main.js"></script>
-    </head>
+  <body>
+    <a href="#" id="get-data">Get JSON data</a>
+    <div id="show-data"></div>
+    <pre></pre>
 
-    <body>
-        <div id="bikeInformation"></div>
-        <button id="btnSubmit">Show Information</button>
-    </body>
+    <script src="main.js"></script>
+  </body>
+</html>
