--- a/HW9/index.html
+++ b/HW9/index.html
@@ -10,6 +10,6 @@
     <div id="show-data"></div>
     <pre></pre>
 
-    <script src="main.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
