--- a/HW9/index.html
+++ b/HW9/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Request JSON Test</title>
-  </head>
 
-  <body>
-    <a href="#" id="get-data">Get JSON data</a>
-    <div id="show-data"></div>
-    <pre></pre>
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="index.js"></script>
-  </body>
+</head>
+
+<body>
+  <div id="bikeInformation"></div>
+  <button id="btnSubmit" onclick="showBikeInfo();">Show Information</button>
+</body>
+
 </html>
