--- a/HW9/index.html
+++ b/HW9/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -6,8 +7,8 @@
 </head>
 
 <body>
-  <div id="bikeInformation"></div>
-  <button id="btnSubmit" onclick="showBikeInfo();">Show Information</button>
+  <div id="bikeInformation">Nothing yet</div>
+  <button>Get Bike Information</button>
 </body>
 
 </html>
