--- a/HW9/index.html
+++ b/HW9/index.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="libs/jquery-3.3.1.min.js"></script>
+    <script src="scripts/jsonajax.js"></script>
+    </head>
 
-</head>
-
-<body>
-  <div id="bikeInformation">Nothing yet</div>
-  <button>Get Bike Information</button>
-</body>
-
+    <body>
+        <div id="bikeInformation"></div>
+        <button id="btnSubmit">Show Information</button>
+    </body>
 </html>
