--- a/HW9/index.html
+++ b/HW9/index.html
@@ -2,12 +2,24 @@
 <html>
 
 <head>
-    <script src="libs/jquery-3.3.1.min.js"></script>
-    <script src="scripts/jsonajax.js"></script>
-    </head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("button").click(function () {
+                $("#bikeInformation").load("bike.json", fadeText);
+            });
+        });
 
-    <body>
-        <div id="bikeInformation"></div>
-        <button id="btnSubmit">Show Information</button>
-    </body>
+        function fadeText()
+        {
+            $("#bikeInformation").fadeOut("slow").fadeIn("slow");
+        }
+    </script>
+</head>
+
+<body>
+    <div id="bikeInformation"></div>
+    <button>Get Bike Information</button>
+</body>
+
 </html>
