--- a/HW9/index.html
+++ b/HW9/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("button").click(function () {
-                $("#bikeInformation").load("bike.json", fadeText);
-            });
-        });
-
-        function fadeText()
-        {
-            $("#bikeInformation").fadeOut("slow").fadeIn("slow");
-        }
-    </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("button").click(function(){
+    $.getJSON("bike.json", function(result){
+      $.each(result, function(i, field){
+        $("div").append(field + " ");
+      });
+    });
+  });
+});
+</script>
 </head>
-
 <body>
-    <div id="bikeInformation"></div>
-    <button>Get Bike Information</button>
-</body>
 
+<button>Get JSON data</button>
+
+<div></div>
+
+</body>
 </html>
