--- a/HW9/index.html
+++ b/HW9/index.html
@@ -6,6 +6,7 @@
 $(document).ready(function(){
   $("button").click(function(){
     $.getJSON("space.json", function(result){
+      console.log(result);
       $.each(result, function(i, field){
         $("div").append(field + " ");
       });
