--- a/HW9/index.html
+++ b/HW9/index.html
@@ -6,6 +6,7 @@
 $(document).ready(function(){
   $("button").click(function(){
     $.getJSON("space.json", function(result){
+      console.log(result);
       $.each(result, function(i, field){
         $("div").append(field + " ");
       });
@@ -16,7 +17,7 @@ $(document).ready(function(){
 </head>
 <body>
 
-<button>test 18</button>
+<button>test 19</button>
 
 <div></div>
 
