--- a/AJAX homework/index.html
+++ b/AJAX homework/index.html
@@ -5,8 +5,7 @@
 <script>
 $(document).ready(function(){
   $("button").click(function(){
-    $.getJSON("space.json", function(result){
-      console.log(result);
+    $.getJSON("data.json", function(result){
       $.each(result, function(i, field){
         $("div").append(field + " ");
       });
@@ -17,7 +16,7 @@ $(document).ready(function(){
 </head>
 <body>
 
-<button>test 19</button>
+<button>Get JSON data</button>
 
 <div></div>
 
