--- a/HW9/index.html
+++ b/HW9/index.html
@@ -13,10 +13,11 @@ $(document).ready(function(){
   });
 });
 </script>
+<link rel="stylesheet" href="main.css" text="text/css">
 </head>
 <body>
 
-<button>Get JSON data</button>
+<button>ISS DATA</button>
 
 <div></div>
 
