--- a/HW9/index.html
+++ b/HW9/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="main.css" text="text/css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
@@ -13,11 +14,10 @@ $(document).ready(function(){
   });
 });
 </script>
-<link rel="stylesheet" href="main.css" text="text/css">
 </head>
 <body>
 
-<button>ISS DATA</button>
+<button>ISS DATA 2</button>
 
 <div></div>
 
