--- a/HW11/index.html
+++ b/HW11/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <audio id="song" src="https://github.com/nathanielspilker/441/blob/main/HW11/music/Benny%20Goodman%20-%20Sing%20Sing%20Sing.mp3" controls="controls">
+      </audio>
     <canvas id="myCanvas" height="600" width="800"></canvas>
 
     <script src="js/main.js"></script>
