--- a/HW11/index.html
+++ b/HW11/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <audio id="song" src="https://github.com/nathanielspilker/441/blob/main/HW11/music/Benny%20Goodman%20-%20Sing%20Sing%20Sing.mp3" controls="controls">
+    <audio id="song" src="https://raw.githubusercontent.com/nathanielspilker/441/main/HW11/music/Benny%20Goodman%20-%20Sing%20Sing%20Sing.mp3" controls="controls">
       </audio>
     <canvas id="myCanvas" height="600" width="800"></canvas>
 
