--- a/HW13/index.html
+++ b/HW13/index.html
@@ -28,9 +28,9 @@
     {
         this.load.setBaseURL('http://labs.phaser.io');
 
-        this.load.image('sky', 'assets/space3.png');
-        this.load.image('logo', 'assets/phaser3-logo.png');
-        this.load.image('red', 'assets/red.png');
+        this.load.image('sky', 'HW13/assets/space3.png');
+        this.load.image('logo', 'HW13/assets/phaser3-logo.png');
+        this.load.image('red', 'HW13/assets/red.png');
     }
 
     function create ()
