--- a/HW13/index.html
+++ b/HW13/index.html
@@ -68,6 +68,9 @@ function create ()
     platforms.create(600, 400, 'ground');
     platforms.create(50, 250, 'ground');
     platforms.create(750, 220, 'ground');
+    platforms.create(100, 350, 'ground');
+    platforms.create(600, 130, 'ground');
+
 
     // The player and its settings
     player = this.physics.add.sprite(100, 450, 'dude');
