--- a/HW13/index.html
+++ b/HW13/index.html
@@ -49,7 +49,7 @@ function preload ()
     this.load.image('ground', 'assets/platform.png');
     this.load.image('star', 'assets/star.png');
     this.load.image('bomb', 'assets/bomb.png');
-    this.load.spritesheet('bikkuriman', 'assets/bikkuriman.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.image('bikkuriman', 'assets/bikkuriman.png', { frameWidth: 32, frameHeight: 48 });
 }
 
 function create ()
