--- a/HW13/index.html
+++ b/HW13/index.html
@@ -35,6 +35,8 @@ var config = {
 var player;
 var stars;
 var bombs;
+var spikes;
+var catstick;
 var platforms;
 var cursors;
 var score = 0;
@@ -46,10 +48,12 @@ var game = new Phaser.Game(config);
 function preload ()
 {
     this.load.image('sky', 'assets/sky.png');
+    this.load.image('catstick', 'assets/catstick.png');
+    this.load.image('spikes', 'assets/spikes.png');
     this.load.image('ground', 'assets/platform.png');
     this.load.image('star', 'assets/star.png');
     this.load.image('bomb', 'assets/bomb.png');
-    this.load.image('bikkuriman', 'assets/bikkuriman.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
 }
 
 function create ()
@@ -71,9 +75,14 @@ function create ()
     platforms.create(100, 350, 'ground');
     platforms.create(600, 130, 'ground');
 
+    spikes = this.physics.add.staticgroup();
+    spikes.create(610, 410,);
+    spikes.create(60, 260,);
+    spikes.create(760, 230,);
+
 
     // The player and its settings
-    player = this.physics.add.sprite(100, 450, 'bikkuriman');
+    player = this.physics.add.sprite(100, 450, 'dude');
 
     //  Player physics properties. Give the little guy a slight bounce.
     player.setBounce(0.2);
@@ -82,20 +91,20 @@ function create ()
     //  Our player animations, turning, walking left and walking right.
     this.anims.create({
         key: 'left',
-        frames: this.anims.generateFrameNumbers('bikkuriman', { start: 0, end: 3 }),
+        frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
         frameRate: 10,
         repeat: -1
     });
 
     this.anims.create({
         key: 'turn',
-        frames: [ { key: 'bikkuriman', frame: 4 } ],
+        frames: [ { key: 'dude', frame: 4 } ],
         frameRate: 20
     });
 
     this.anims.create({
         key: 'right',
-        frames: this.anims.generateFrameNumbers('bikkuriman', { start: 5, end: 8 }),
+        frames: this.anims.generateFrameNumbers('dude', { start: 5, end: 8 }),
         frameRate: 10,
         repeat: -1
     });
@@ -119,6 +128,21 @@ function create ()
 
     bombs = this.physics.add.group();
 
+    catstick = this.physics.add.group({
+        key: 'catstick',
+        repeat: 4,
+        setXY: { x: 12, y: 0, stepX: 70 }
+    });
+
+    catstick.children.iterate(function (child) {
+
+        //  Give each star a slightly different bounce
+        child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
+
+    });
+
+    bombs = this.physics.add.group();
+
     //  The score
     scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 
@@ -126,11 +150,18 @@ function create ()
     this.physics.add.collider(player, platforms);
     this.physics.add.collider(stars, platforms);
     this.physics.add.collider(bombs, platforms);
+    this.physics.add.collider(spikes, player);
+    this.physics.add.collider(catstick, platforms);
 
     //  Checks to see if the player overlaps with any of the stars if he does call the collectStar function
     this.physics.add.overlap(player, stars, collectStar, null, this);
 
     this.physics.add.collider(player, bombs, hitBomb, null, this);
+
+    this.physics.add.overlap(player, catstick, collectCatstick, null, this);
+
+    this.physics.add.collider(player, spikes, hitSpikes, null, this);
+
 }
 
 function update ()
@@ -193,7 +224,46 @@ function collectStar (player, star)
     }
 }
 
+function collectCatstick (player, catstick)
+{
+    catstick.disableBody(true, true);
+
+    //  Add and update the score
+    score += 20;
+    scoreText.setText('Score: ' + score);
+
+    if (catstick.countActive(true) === 0)
+    {
+        //  A new batch of stars to collect
+        catstick.children.iterate(function (child) {
+
+            child.enableBody(true, child.x, 0, true, true);
+
+        });
+
+        var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+
+        var bomb = bombs.create(x, 16, 'bomb');
+        bomb.setBounce(1);
+        bomb.setCollideWorldBounds(true);
+        bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
+        bomb.allowGravity = false;
+
+    }
+}
+
 function hitBomb (player, bomb)
+{
+    this.physics.pause();
+
+    player.setTint(0xff0000);
+
+    player.anims.play('turn');
+
+    gameOver = true;
+}
+
+function hitSpikes (player, spikes)
 {
     this.physics.pause();
 
