--- a/HW13/index.html
+++ b/HW13/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8" />
     <title>Making your first Phaser 3 Game - Part 10</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -35,8 +35,6 @@ var config = {
 var player;
 var stars;
 var bombs;
-var spikes;
-var catstick;
 var platforms;
 var cursors;
 var score = 0;
@@ -48,8 +46,6 @@ var game = new Phaser.Game(config);
 function preload ()
 {
     this.load.image('sky', 'assets/sky.png');
-    this.load.image('catstick', 'assets/catstick.png');
-    this.load.image('spikes', 'assets/spikes.png');
     this.load.image('ground', 'assets/platform.png');
     this.load.image('star', 'assets/star.png');
     this.load.image('bomb', 'assets/bomb.png');
@@ -72,14 +68,8 @@ function create ()
     platforms.create(600, 400, 'ground');
     platforms.create(50, 250, 'ground');
     platforms.create(750, 220, 'ground');
-    platforms.create(100, 350, 'ground');
-    platforms.create(600, 130, 'ground');
-
-    spikes = this.physics.add.staticgroup();
-    spikes.create(610, 410,);
-    spikes.create(60, 260,);
-    spikes.create(760, 230,);
-
+    platforms.create(500, 300, 'ground');
+    platforms.create(300, 600, 'ground');
 
     // The player and its settings
     player = this.physics.add.sprite(100, 450, 'dude');
@@ -128,21 +118,6 @@ function create ()
 
     bombs = this.physics.add.group();
 
-    catstick = this.physics.add.group({
-        key: 'catstick',
-        repeat: 4,
-        setXY: { x: 12, y: 0, stepX: 70 }
-    });
-
-    catstick.children.iterate(function (child) {
-
-        //  Give each star a slightly different bounce
-        child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
-
-    });
-
-    bombs = this.physics.add.group();
-
     //  The score
     scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 
@@ -150,18 +125,11 @@ function create ()
     this.physics.add.collider(player, platforms);
     this.physics.add.collider(stars, platforms);
     this.physics.add.collider(bombs, platforms);
-    this.physics.add.collider(spikes, player);
-    this.physics.add.collider(catstick, platforms);
 
     //  Checks to see if the player overlaps with any of the stars if he does call the collectStar function
     this.physics.add.overlap(player, stars, collectStar, null, this);
 
     this.physics.add.collider(player, bombs, hitBomb, null, this);
-
-    this.physics.add.overlap(player, catstick, collectCatstick, null, this);
-
-    this.physics.add.collider(player, spikes, hitSpikes, null, this);
-
 }
 
 function update ()
@@ -224,46 +192,7 @@ function collectStar (player, star)
     }
 }
 
-function collectCatstick (player, catstick)
-{
-    catstick.disableBody(true, true);
-
-    //  Add and update the score
-    score += 20;
-    scoreText.setText('Score: ' + score);
-
-    if (catstick.countActive(true) === 0)
-    {
-        //  A new batch of stars to collect
-        catstick.children.iterate(function (child) {
-
-            child.enableBody(true, child.x, 0, true, true);
-
-        });
-
-        var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
-
-        var bomb = bombs.create(x, 16, 'bomb');
-        bomb.setBounce(1);
-        bomb.setCollideWorldBounds(true);
-        bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
-        bomb.allowGravity = false;
-
-    }
-}
-
 function hitBomb (player, bomb)
-{
-    this.physics.pause();
-
-    player.setTint(0xff0000);
-
-    player.anims.play('turn');
-
-    gameOver = true;
-}
-
-function hitSpikes (player, spikes)
 {
     this.physics.pause();
 
