--- a/HW13/index.html
+++ b/HW13/index.html
@@ -69,7 +69,7 @@ function create ()
     platforms.create(50, 250, 'ground');
     platforms.create(750, 220, 'ground');
     platforms.create(500, 300, 'ground');
-    platforms.create(300, 600, 'ground');
+    platforms.create(300, 150, 'ground');
 
     // The player and its settings
     player = this.physics.add.sprite(100, 450, 'dude');
@@ -158,7 +158,7 @@ function update ()
         player.anims.play('turn');
     }
 
-    if (cursors.up.isDown && player.body.touching.down)
+    if (cursors.spacebar.isDown && player.body.touching.down)
     {
         player.setVelocityY(-330);
     }
