--- a/HW13/index.html
+++ b/HW13/index.html
@@ -158,7 +158,7 @@ function update ()
         player.anims.play('turn');
     }
 
-    if (cursors.spacebar.isDown && player.body.touching.down)
+    if (cursors.up.isDown && player.body.touching.down)
     {
         player.setVelocityY(-330);
     }
