--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -2,6 +2,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./scripts/main.js"></script>
     <link href="styles/style.css" type="text/css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    </head>
     <body>
         <div id="square"></div>
         <br>
