--- a/HW16/index.html
+++ b/HW16/index.html
@@ -3,8 +3,6 @@
     <script src="main.js"></script>
     <link href="main.css" type="text/css" rel="stylesheet">
     <body>
-        <button id="move">Yes</button>
-        <br>
         <img src="" id="cat">
         <p class="stuff">How do you do?</p>
         <p class="stuff">You're doing a great job!</p>
@@ -15,6 +13,8 @@
         <p class="stuff">You're doing a great job!</p>
         <p class="stuff">You're doing a great job!</p>
         <p id="third">I believe in you!</p>
+        <br>
+        <button id="move">The End!</button>
 
         <div class="stuff"> I hope these little words give you some joy.</div>
     </body>
