--- a/HW16/index.html
+++ b/HW16/index.html
@@ -5,7 +5,7 @@
     <body>
         <img src="" id="cat">
         <p class="stuff">How do you do?</p>
-        <p class="stuff">You're doing a great job!</p>
+        <p class="stuff">Testing to see if you can see this!</p>
         <p class="stuff">You're doing a great job!</p>
         <p class="stuff">You're doing a great job!</p>
         <p class="stuff">You're doing a great job!</p>
