--- a/HW16/index.html
+++ b/HW16/index.html
@@ -4,17 +4,17 @@
     <link href="main.css" type="text/css" rel="stylesheet">
     <body>
         <img src="" id="cat">
-        <p class="stuff">How do you do?</p>
-        <p class="stuff">Testing to see if you can see this!</p>
-        <p class="stuff">You're doing a great job!</p>
-        <p class="stuff">You're doing a great job!</p>
-        <p class="stuff">You're doing a great job!</p>
-        <p class="stuff">You're doing a great job!</p>
-        <p class="stuff">You're doing a great job!</p>
-        <p class="stuff">You're doing a great job!</p>
-        <p id="third">I believe in you!</p>
+        <p class="stuff">Here is a showcasing of me!</p>
+        <p class="stuff">I have completed this class to the best of my abilities.</p>
+        <p class="stuff">I am very excited for summer!</p>
+        <p class="stuff">Oh my god im a senior now! How did that happen!?</p>
+        <p class="stuff">Ill be seeing my favorite band and that is going to be so much fun!</p>
+        <p class="stuff">I still have to work at my job over the summer, but it could be worse.</p>
+        <p class="stuff">Coding is not my strong suit, but I believe I have learned an ok amount over the years and now have some decent credit to my name.</p>
+        <p class="stuff">Im gonna have a great summer and nothing can stop me!</p>
+        <p id="third">I hope you have a great summer too!</p>
         <br>
-        <button id="move">The End!</button>
+        <button id="move">Dont Erase Me No!</button>
 
         <div class="stuff"> I hope these little words give you some joy.</div>
     </body>
