--- a/HW16/index.html
+++ b/HW16/index.html
@@ -3,19 +3,19 @@
     <script src="main.js"></script>
     <link href="main.css" type="text/css" rel="stylesheet">
     <body>
-        <img src="" id="cat">
-        <p class="stuff">Here is a showcasing of me!</p>
-        <p class="stuff">I have completed this class to the best of my abilities.</p>
-        <p class="stuff">I am very excited for summer!</p>
-        <p class="stuff">Oh my god im a senior now! How did that happen!?</p>
-        <p class="stuff">Ill be seeing my favorite band and that is going to be so much fun!</p>
-        <p class="stuff">I still have to work at my job over the summer, but it could be worse.</p>
-        <p class="stuff">Coding is not my strong suit, but I believe I have learned an ok amount over the years and now have some decent credit to my name.</p>
-        <p class="stuff">Im gonna have a great summer and nothing can stop me!</p>
-        <p id="third">I hope you have a great summer too!</p>
+        <div style ="text-align:center">
+        <img src="" id="cat" style="text-align:center">
+        <p class="stuff" style="text-align:center">Here is a showcasing of me!</p>
+        <p class="stuff" style="text-align:center">I have completed this class to the best of my abilities.</p>
+        <p class="stuff" style="text-align:center">I am very excited for summer!</p>
+        <p class="stuff" style="text-align:center">Oh my god im a senior now! How did that happen!?</p>
+        <p class="stuff" style="text-align:center">Ill be seeing my favorite band and that is going to be so much fun!</p>
+        <p class="stuff" style="text-align:center">I still have to work at my job over the summer, but it could be worse.</p>
+        <p class="stuff" style="text-align:center">Coding is not my strong suit, but I believe I have learned an ok amount over the years and now have some decent credit to my name.</p>
+        <p class="stuff" style="text-align:center">Im gonna have a great summer and nothing can stop me!</p>
+        <p id="third" style="text-align:center">I hope you have a great summer too!</p>
         <br>
-        <button id="move">Dont Erase Me No!</button>
-
-        <div class="stuff"> I hope these little words give you some joy.</div>
+        <button id="move" style="text-align:center">Dont Erase Me No!</button>
+        </div>
     </body>
 </html>
