--- a/HW16/index.html
+++ b/HW16/index.html
@@ -3,7 +3,18 @@
     <script src="main.js"></script>
     <link href="main.css" type="text/css" rel="stylesheet">
     <body>
-        <img src="" id="dog" style="text-align:center">
+        div {  
+            width: 300px;  
+            height: auto;  
+            text-align: center;  
+            padding: 15px;  
+            border: 3px solid red;  
+            }  
+            img {  
+            object-fit: cover;  
+            }  
+        <img src="" id="dog" style="text-align:center" width: 300px;  
+        height: 300px; >
         <p class="stuff" style="text-align:center">Here is a showcasing of me!</p>
         <p class="stuff" style="text-align:center">I have completed this class to the best of my abilities.</p>
         <p class="stuff" style="text-align:center">I am very excited for summer!</p>
