--- a/HW16/index.html
+++ b/HW16/index.html
@@ -3,18 +3,7 @@
     <script src="main.js"></script>
     <link href="main.css" type="text/css" rel="stylesheet">
     <body>
-        div {  
-            width: 300px;  
-            height: auto;  
-            text-align: center;  
-            padding: 15px;  
-            border: 3px solid red;  
-            }  
-            img {  
-            object-fit: cover;  
-            }  
-        <img src="" id="dog" style="text-align:center" width: 300px;  
-        height: 300px; >
+        <img src="" id="dog" style="text-align:center">
         <p class="stuff" style="text-align:center">Here is a showcasing of me!</p>
         <p class="stuff" style="text-align:center">I have completed this class to the best of my abilities.</p>
         <p class="stuff" style="text-align:center">I am very excited for summer!</p>
@@ -23,9 +12,8 @@
         <p class="stuff" style="text-align:center">I still have to work at my job over the summer, but it could be worse.</p>
         <p class="stuff" style="text-align:center">Coding is not my strong suit, but I believe I have learned an ok amount over the years and now have some decent credit to my name.</p>
         <p class="stuff" style="text-align:center">Im gonna have a great summer and nothing can stop me!</p>
-        <p id="third" style="text-align:center">I hope you have a great summer too!</p>
         <br>
-        <button id="move" style="text-align:center">Dont Erase Me No!</button>
+        <button id="erase" style="text-align:center">Dont Erase Me No!</button>
         </div>
     </body>
 </html>
