--- a/HW16/index.html
+++ b/HW16/index.html
@@ -14,6 +14,25 @@
         <p class="stuff" style="text-align:center">Im gonna have a great summer and nothing can stop me!</p>
         <br>
         <button id="erase" style="text-align:center">Dont Erase Me No!</button>
+        <h1>Mine Sweeper</h1>
+        <div class="divTable">
+        <div class="divTableBody">
+        <div class="divTableRow">
+        <div class="divTableCell">First Name</div>
+        <div class="divTableCell"><input type="text" id="txtFirstName"></div>
+        </div>
+        <div class="divTableRow">
+        <div class="divTableCell">Last Name</div>
+        <div class="divTableCell"><input type="text" id="txtLastName"></div>
+        </div>
+        <div class="divTableRow">
+        <div class="divTableCell">Age</div>
+        <div class="divTableCell"><input type="text" id="txtAge"></div>
+        </div>
+        <div class="divTableRow">
+        <div class="divTableCell"><button id="btnSubmit" onclick="fadeOut();">Submit</button></div>
+        </div>
+        </div>
         </div>
     </body>
 </html>
