--- a/HW16/index.html
+++ b/HW16/index.html
@@ -3,7 +3,7 @@
     <script src="main.js"></script>
     <link href="main.css" type="text/css" rel="stylesheet">
     <body>
-        <img src="" id="dog" style="text-align:center">
+        <img src="" id="uni" style="text-align:center">
         <p class="stuff" style="text-align:center">Here is a showcasing of me!</p>
         <p class="stuff" style="text-align:center">I have completed this class to the best of my abilities.</p>
         <p class="stuff" style="text-align:center">I am very excited for summer!</p>
@@ -13,8 +13,7 @@
         <p class="stuff" style="text-align:center">Coding is not my strong suit, but I believe I have learned an ok amount over the years and now have some decent credit to my name.</p>
         <p class="stuff" style="text-align:center">Im gonna have a great summer and nothing can stop me!</p>
         <br>
-        <button id="erase" style="text-align:center">Dont Erase Me No!</button>
-        <h1>Mine Sweeper</h1>
+        <h1>Emergency Summer Plan Erase</h1>
         <div class="divTable">
         <div class="divTableBody">
         <div class="divTableRow">
@@ -26,11 +25,11 @@
         <div class="divTableCell"><input type="text" id="txtLastName"></div>
         </div>
         <div class="divTableRow">
-        <div class="divTableCell">Age</div>
-        <div class="divTableCell"><input type="text" id="txtAge"></div>
+        <div class="divTableCell">Clearence Code</div>
+        <div class="divTableCell"><input type="text" id="txtCode"></div>
         </div>
         <div class="divTableRow">
-        <div class="divTableCell"><button id="btnSubmit" onclick="fadeOut();">Submit</button></div>
+        <div class="divTableCell"><button id="erase" style="text-align:center">Confirm</button></div>
         </div>
         </div>
         </div>
