--- a/HW16/index.html
+++ b/HW16/index.html
@@ -3,7 +3,7 @@
     <script src="main.js"></script>
     <link href="main.css" type="text/css" rel="stylesheet">
     <body>
-        <img src="" id="logo" style="text-align:center">
+        <img src="" id="dog" style="text-align:center">
         <p class="stuff" style="text-align:center">Here is a showcasing of me!</p>
         <p class="stuff" style="text-align:center">I have completed this class to the best of my abilities.</p>
         <p class="stuff" style="text-align:center">I am very excited for summer!</p>
