--- a/HW16/index.html
+++ b/HW16/index.html
@@ -1,7 +1,11 @@
 <html>
+    <meta charset="utf-8">
+    <meta name="author" content="Nathaniel Spilker">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="main.js"></script>
     <link href="main.css" type="text/css" rel="stylesheet">
+
     <body>
         <img src="" id="dog" style="text-align:center">
         <p class="stuff" style="text-align:center">Here is a showcasing of me!</p>
